ajoute les calculs de bases

--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
                 <button type="button" class="btn" id="btnx">CE</button>
                 <button type="button" class="btn" id="btnx">C</button>
                 <div></div>
-                <button type="button" class="btn" data-num="/" id="funcbtn">/</button>
+                <button type="button" class="btn funcbtn" data-num="/" id="btn-division">/</button>
                 <button type="button" class="btn" data-num="7">7</button>
                 <button type="button" class="btn" data-num="8">8</button>
                 <button type="button" class="btn" data-num="9">9</button>
-                <button type="button" class="btn" data-num="+" id="funcbtn">x</button>
+                <button type="button" class="btn funcbtn" data-num="*" id="btn-multiply">x</button>
                 <button type="button" class="btn" data-num="4">4</button>
                 <button type="button" class="btn" data-num="5">5</button>
                 <button type="button" class="btn" data-num="6">6</button>
-                <button type="button" class="btn" data-num="-" id="funcbtn">-</button>
+                <button type="button" class="btn funcbtn" data-num="-" id="btn-remove">-</button>
                 <button type="button" class="btn" data-num="1">1</button>
                 <button type="button" class="btn" data-num="2">2</button>
                 <button type="button" class="btn" data-num="3">3</button>
-                <button type="button" class="btn" data-num="*" id="funcbtn">+</button>
+                <button type="button" class="btn funcbtn" data-num="+" id="btn-add">+</button>
                 <button type="button" class="btn" data-num="0">0</button>
                 <button type="button" class="btn">,</button>
-                <button type="button" class="btn large" data-num="=" id="funcbtn">=</button>
+                <button type="button" class="btn large funcbtn" id="btn-equal">=</button>
             </div>
         </div>
+
+        <script src="index.js"></script>
 
     </body>
 
