ajoute la possibilité de voir l'ancienne valeur de son calcul

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <body>
 
         <div class="calculator">
-            <input type="text" class="screen" placeholder="0">
+            <input id="screen-value" type="text" class="screen-value" placeholder="0">
+            <input id="screen" type="text" class="screen" placeholder="0">
             <div class="buttons">
                 <button type="button" class="btn" id="btnx">CE</button>
                 <button type="button" class="btn" id="btnx">C</button>
