--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button type="button" class="btn" data-num="3">3</button>
                 <button type="button" class="btn funcbtn" data-num="+" id="btn-add">+</button>
                 <button type="button" class="btn" data-num="0">0</button>
-                <button type="button" class="btn">,</button>
+                <button type="button" class="btn" data-num=".">,</button>
                 <button type="button" class="btn large funcbtn" id="btn-equal">=</button>
             </div>
         </div>
