ajoute les fonctionalités de clear son erreur ou l'entièreté

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <input id="screen-value" type="text" class="screen-value" placeholder="0">
             <input id="screen" type="text" class="screen" placeholder="0">
             <div class="buttons">
-                <button type="button" class="btn" id="btnx">CE</button>
-                <button type="button" class="btn" id="btnx">C</button>
+                <button type="button" class="btn btnx" id="btn-clear-error">CE</button>
+                <button type="button" class="btn btnx" id="btn-clear">C</button>
                 <div></div>
                 <button type="button" class="btn funcbtn" data-num="/" id="btn-division">/</button>
                 <button type="button" class="btn" data-num="7">7</button>
