règle l'affichage de l'historique

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     <button type="button" class="btn large funcbtn" id="btn-equal">=</button>
                 </div>
             </div>
-        </div>
-        <div class="history">
-            <div class="calculHistory">
-
+            <div class="box history">
+                <div class="calculHistory">
+    
+                </div>
             </div>
         </div>
 
